# factorial-rayon-neon

./: README.md  package-lock.json  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
