[package]
name = "fibonacci-rayon-neon"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "fibonacci_rayon_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
